[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeline_viz"
version = "0.1.0"
description = "A library for creating timeline visualizations from CSV data"
readme = "README.md"
authors = [
    {name = "Garry Williams", email = "garry.williams@bestbuy.com"}
]
license = {text = "NA"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.2.4",
    "matplotlib>=3.4.0",
    "pandas>=2.2.3",
    "python-dateutil>=2.8.2",
    "pytz>=2025.1",
]

[project.urls]
"Homepage" = "https://github.com/garrywilliams/timeline_viz"
"Bug Tracker" = "https://github.com/garrywilliams/timeline_viz/issues"

[project.scripts]
timeline-viz = "cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[tool.setuptools]
py-modules = ["__init__", "timeline", "cli", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/__init__.py",
    "setup.py",
    ".venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
fail_under = 90